recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:2: error: not found: value squareSide
  squareSide(levels-1,length*0.4)
  ^PentaKoch:4: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^PentaKoch:6: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^PentaKoch:8: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^PentaKoch:10: error: not found: value squareSide
    squareSide(levels-1,length*0.4)
    ^