recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
  squareSide(levels-1,length*0.4)
    gauche(90)
    squareSide(levels-1,length*0.4)
    droite(90)
    squareSide(levels-1,length*0.4)
    droite(90)
    squareSide(levels-1,length*0.4)
    gauche(90)
    squareSide(levels-1,length*0.4)
}